Bug 185884 - empty view after clicking the left thumbnail image in Image Editor filter view
Summary: empty view after clicking the left thumbnail image in Image Editor filter view
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Canvas (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-01 17:23 UTC by Nadav Kavalerchik
Modified: 2017-08-08 17:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nadav Kavalerchik 2009-03-01 17:23:08 UTC
Version:           0.10.0 (rev.: 933374) (using 4.2.00 (KDE 4.2.0), Debian packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.26-1-amd64

i open an image in the image editor
select emboss filter ( play with it a little, you do not have to!)
and then click on some other image in the left thumbnail image bar
which clear the view and does not show anything instead.
(looks like a bug?)

i expect to see the new selected image with the same filter parameters i just set (for the previous image). OR maybe a different idea for a different behavior could be suggested ?
Comment 1 Marcel Wiesweg 2009-03-02 22:48:34 UTC
For me it closes the filter and loads the image you clicked. That is the currently intended behavior (there is a wish to make it so as you describe it).
Can you confirm that the next image is not loaded for you?  What happens if you click on just another image? And only after emboss plugin? 
Anyone else tested this?
Comment 2 Andi Clemens 2009-03-02 22:53:57 UTC
For me it closes the filter and opens the newly selected image.
Comment 3 Nadav Kavalerchik 2009-03-03 17:18:47 UTC
i was working with a different zoom then 100%
and i found out that the new image is displayed as 1 pixel at zoom 17% (for example)
when i played with the zoom slider... the image started to appear.

so i guess it should also set the new image zoom level 100% , no matter what was the previous one

can anyone confirm this ?
(view a very large image in a very small zoom factor 5-10% 
and then click on a new small image to not see it at all ?)
Comment 4 Marcel Wiesweg 2009-03-03 21:49:01 UTC
Preserving the zoom factor is intentional (in fact there was a bug report that we did not do it) but obviously it can have this side effect. But zoom factor is relative: a one pixel image at 17% would not be have an original size of more than 6px if I see that right?
Comment 5 Nadav Kavalerchik 2009-03-15 09:53:17 UTC
i confirm that the initial : "image is disappearing and a blank page is seen" bug is gone with svn version 933374
but, i think the current filter should be applied to the newly selected image.
maybe you can change this issue to a wish ? instead if a bug.
Comment 6 Andi Clemens 2009-04-17 10:16:29 UTC
For me the bug has returned.

1. Open Image Folder in showFoto
2. Select one image, open a filter (don't close or apply it)
3. click onto another image
4. Filter is closed, image is not displayed
5. Click on "Fit to Window", image will reappear.

Andi
Comment 7 caulier.gilles 2009-04-17 10:32:19 UTC
yes, i remember this dysfunction rarely. difficult to reproduce. Sound like a race condition with signals/slots in editor core implementation

Gilles
Comment 8 Andi Clemens 2009-04-17 10:43:34 UTC
For me it is not rarely, I can reproduce it every time.
I guess you need to have "Fit to Window" toggled and you need to have a filter WITHOUT zooming capabilities (for example free rotation, decorate filters etc).

Andi
Comment 9 Mikolaj Machowski 2009-04-17 16:03:38 UTC
For me it also happens, maybe not each time but often. I can get image to show by resizing left thumbnail bar.
Comment 10 Marcel Wiesweg 2009-04-17 19:21:24 UTC
Yes this is absolutely reproducable. Fit to Window need to be toggled on before opening the filter. I used free rotation. Zoom+ or zoom- brings back the image. To reproduce again, toggle on Fit to Window.
We need to see if the zoom factor is set wrongly somewhere. It must be in relation with the Fit to Window functionality.
Comment 11 Andi Clemens 2009-04-18 09:39:36 UTC
Another way to check it:

1. Open a folder in the editor with RAW files
2. Fit to Window
3. Open RAW file with the RAW importer
4. Make some changes, click "Import"
5. Image is "gone"...

Most users might think the tool has messed up the image data and therefore does not display an image.

Andi
Comment 12 Marcel Wiesweg 2009-04-18 17:06:20 UTC
SVN commit 955802 by mwiesweg:

Seemingly unrelated to the bug, but it fixes the problem.
calcAutoZoomFactor would wrongly get that the image is valid, and then
calculate auto zoom for an image of size 0. Result is infinity.
For some other reason this was not corrected from slotImageLoaded.
With this change, calcAutoZoom will only use valid values.

BUG: 185884

 M  +2 -1      NEWS  
 M  +1 -1      utilities/imageeditor/canvas/dimginterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=955802