Seemingly unrelated to the bug, but it fixes the problem. calcAutoZoomFactor would wrongly get that the image is valid, and then calculate auto zoom for an image of size 0. Result is infinity. For some other reason this was not corrected from slotImageLoaded. With this change, calcAutoZoom will only use valid values.

BUG: 185884

svn path=/trunk/extragear/graphics/digikam/; revision=955802